adding auth service with mysql CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #mongodb
-spring.data.mongodb.uri=mongodb://ragmeya:ragmeya@cluster0-shard-00-00-rc3mr.mongodb.net:27017,cluster0-shard-00-01-rc3mr.mongodb.net:27017,cluster0-shard-00-02-rc3mr.mongodb.net:27017/admin?replicaSet=Cluster0-shard-0&ssl=true
-spring.data.mongodb.database=skools
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/skools
+spring.datasource.username=root
+spring.datasource.password=mysql
