--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,11 @@ dependencies {
     // end::jetty[]
     // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// Use MySQL Connector-J
+    compile 'mysql:mysql-connector-java'
+        
     // Swagger dependencies
 	compile("io.springfox:springfox-swagger2:$swaggerVersion")
 	compile("io.springfox:springfox-swagger-ui:$swaggerVersion")
