--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	compile("io.springfox:springfox-swagger2:$swaggerVersion")
 	compile("io.springfox:springfox-swagger-ui:$swaggerVersion")
 	
+	//spring session
+	compile("org.springframework.session:spring-session:1.3.1.RELEASE")
+	compile("org.springframework.boot:spring-boot-starter-redis:1.3.1.RELEASE")
+	
     // end::actuator[]
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
