--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/skools
 spring.datasource.username=root
 spring.datasource.password=mysql
+
+#for handling session
+spring.redis.host=localhost
+#spring.redis.password=secret
+spring.redis.port=6379
